tests/rosetta/out/Smalltalk/date-manipulation.error
parse: error[P999]: /workspace/mochi/tests/rosetta/x/Mochi/date-manipulation.mochi:102:3: unexpected token "}" (expected PostfixExpr)
  --> /workspace/mochi/tests/rosetta/x/Mochi/date-manipulation.mochi:102:3

102 |   }
    |   ^

help:
  Parse error occurred. Check syntax near this location.